@@ -5,7 +5,6 @@ import java.util.List;
 import java.util.stream.Collectors;
 import org.opentripplanner.api.model.ApiStop;
 import org.opentripplanner.api.model.ApiStopShort;
-import org.opentripplanner.transit.model.site.Stop;
 import org.opentripplanner.transit.model.site.StopLocation;
 
 public class StopMapper {
@@ -69,13 +68,13 @@ public class StopMapper {
   }
 
   /** @param distance in integral meters, to avoid serializing a bunch of decimal places. */
-  public static ApiStopShort mapToApiShort(Stop domain, int distance) {
+  public static ApiStopShort mapToApiShort(StopLocation domain, double distance) {
     if (domain == null) {
       return null;
     }
 
     ApiStopShort api = mapToApiShort(domain);
-    api.dist = distance;
+    api.dist = (int) distance;
 
     return api;
   }
@@ -84,7 +83,7 @@ public class StopMapper {
     if (domain == null) {
       return null;
     }
-    return domain.stream().map(StopMapper::mapToApiShort).collect(Collectors.toList());
+    return domain.stream().map(StopMapper::mapToApiShort).toList();
   }
 
   /**
